--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </button>
         <div class="collapse navbar-collapse" id="ftco-nav">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active"><a href="about.html" class="nav-link">A propos</a></li>
+            <li class="nav-item active"><a href="index.html" class="nav-link">A propos</a></li>
           </ul>
         </div>
       </div>
